--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,7 +8,7 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$rojo: #c51d20; 
+$rojo: #d3261d; //#c51d20
 $negro: #1a1b15;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
